; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/mdmfs/extr_mdmfs.c_do_mount_md.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/mdmfs/extr_mdmfs.c_do_mount_md.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"%s%s /dev/%s%d%s %s\00", align 1
@_PATH_MOUNT = common dso_local global i32 0, align 4
@mdname = common dso_local global i32 0, align 4
@unit = common dso_local global i32 0, align 4
@mdsuffix = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"mount exited %s %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @do_mount_md to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_mount_md(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @_PATH_MOUNT, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @mdname, align 4
  %9 = load i32, i32* @unit, align 4
  %10 = load i32, i32* @mdsuffix, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @run(i32* null, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %6, i8* %7, i32 %8, i32 %9, i32 %10, i8* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @run_exitstr(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @run_exitnumber(i32 %18)
  %20 = call i32 @errx(i32 1, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %17, i32 %19)
  br label %21

21:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @run(i32*, i8*, i32, i8*, i32, i32, i32, i8*) #1

declare dso_local i32 @errx(i32, i8*, i32, i32) #1

declare dso_local i32 @run_exitstr(i32) #1

declare dso_local i32 @run_exitnumber(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
